fix: room wrap bug

--- a/src/components/pages/room/styles.module.scss
+++ b/src/components/pages/room/styles.module.scss
@@ -7,7 +7,7 @@
 div.wrap {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: auto;
+    grid-template-rows: auto 1fr;
     gap: 2rem;
     margin: 0 auto;
 
